[package]
name = "rs"
version = "0.1.0"
authors = ["Darragh Downey <darragh.downey90@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["data-structures", "algorithms", "reference-material"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
